--- a/index.html
+++ b/index.html
@@ -2,26 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Box Model Info - Home</title>
-
-<!--  added links:-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
-  <link rel="stylesheet" type="text/css" href="styles/style.css">
-
+  <title>Bootstrap Demo</title>
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" 
+        integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" 
+        crossorigin="anonymous">
 </head>
 <body>
   <header>
     <img src="https://images.pexels.com/photos/374906/pexels-photo-374906.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="The cutest puppy EVER!!" >
     <h1>Box Model Info Sheet</h1>
-
-    
-  <!--
-    <nav>
+<!-- non-boostrap version of nav:  -->
+<!--<nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="contact.html">Contact</a></li>
-        
         <li><a href="https://www.google.com/" target="_blank">Google</a></li>
       </ul>
     </nav>
