Inline img size style

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" 
         integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" 
         crossorigin="anonymous">
+  <style>
+    img {
+        width: 40%;
+    }
+  </style>
 </head>
 <body>
   <header>
     <img src="https://images.pexels.com/photos/374906/pexels-photo-374906.jpeg?w=1260&h=750&auto=compress&cs=tinysrgb" alt="The cutest puppy EVER!!" >
-    <h1>Box Model Info Sheet</h1>
+    <h1>Bootstrap Demo Page</h1>
 <!-- non-boostrap version of nav:  -->
 <!--<nav>
       <ul>
